--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Test 2025-10-13 at 23:46:30
+# Test 2025-10-13 at 23:48:42
 
 name: Test
 run-name: dockerSiliconCompiler
@@ -21,7 +21,9 @@ jobs:
 
     - name: Install silicon compiler
       run: |
-        sudo apt update                                                         # Update package information
+        #sudo apt update                                                        # Update package information
         sudo apt install python3-dev python3-pip python3-venv                   # Install dependencies
         python3 -m venv  ./sc                                                   # Create a virtual env
         source ./sc/bin/activate                                                # Active virtual env (bash/zsh)
+        pip install --upgrade siliconcompiler                                   # Install SiliconCompiler in venv
+        pip show siliconcompiler                                                # Display SiliconCompiler package information
