--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Test 2025-10-13 at 23:49:48
+# Test 2025-10-13 at 23:50:41
 
 name: Test
 run-name: dockerSiliconCompiler
@@ -19,7 +19,7 @@ jobs:
       with:
         ref: 'main'
 
-    - name: Install silicon compiler as dscribed in: https://docs.siliconcompiler.com/en/stable/user_guide/installation.html
+    - name: 'Install silicon compiler as described in: https://docs.siliconcompiler.com/en/stable/user_guide/installation.html'
       run: |
         #sudo apt update                                                        # Update package information
         sudo apt install python3-dev python3-pip python3-venv                   # Install dependencies
