--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Test 2025-10-14 at 01:00:15
+# Test 2025-10-14 at 01:09:40
 
 name: Test
 run-name: dockerSiliconCompiler
@@ -21,7 +21,7 @@ jobs:
 
     - name: 'Install silicon compiler as described in: https://docs.siliconcompiler.com/en/stable/user_guide/installation.html'
       run: |
-        sudo apt update                                                        # Update package information
+        #sudo apt update                                                        # Update package information - not necessary because github will have already done this
         sudo apt install python3-dev python3-pip python3-venv                   # Install dependencies
         python3 -m venv  ./sc                                                   # Create a virtual env
         source ./sc/bin/activate                                                # Active virtual env (bash/zsh)
@@ -35,4 +35,5 @@ jobs:
         sc-install openroad
         sc-install klayout
         sc-install yosys
-        sc-install -group asic
+        sc-install sv2v
+        sc-install yosys-slang
