--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Test 2025-10-14 at 01:09:40
+# Test 2025-10-14 at 02:48:41
 
 name: Test
 run-name: dockerSiliconCompiler
@@ -11,29 +11,61 @@ on:
 jobs:
 
   test:
-    permissions: write-all
+    permissions:
+      contents: read
+      packages: write  # Needed for GHCR push
+
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: 'Install silicon compiler in a docker container based on: https://docs.siliconcompiler.com/en/stable/user_guide/installation.html'
+      run: |
+        cat << 'EOF' > Dockerfile
+        FROM ubuntu:22.04
+
+        RUN apt-get update
+        RUN apt-get install -y python3-dev python3-pip python3-venv curl git build-essential sudo
+        RUN rm -rf /var/lib/apt/lists/*
+
+        # Set working directory
+        WORKDIR /app
+
+        # Create virtual environment
+        RUN python3 -m venv ./sc
+
+        # Upgrade pip inside virtual environment
+        RUN /bin/bash -c "source ./sc/bin/activate && pip install --upgrade pip"
+
+        # Install SiliconCompiler
+        RUN /bin/bash -c "source ./sc/bin/activate && pip install siliconcompiler"
+        RUN /bin/bash -c "source ./sc/bin/activate && pip show siliconcompiler"
+        RUN /bin/bash -c "source ./sc/bin/activate && python3 -c 'import siliconcompiler; print(siliconcompiler.__version__)'"
+
+        # Install ASIC tools via sc-install
+        RUN /bin/bash -c "source ./sc/bin/activate && sc-install openroad"
+        RUN /bin/bash -c "source ./sc/bin/activate && sc-install klayout"
+        RUN /bin/bash -c "source ./sc/bin/activate && sc-install yosys"
+        RUN /bin/bash -c "source ./sc/bin/activate && sc-install sv2v"
+        RUN /bin/bash -c "source ./sc/bin/activate && sc-install yosys-slang"
+
+        # Default command
+        CMD ["/bin/bash"]
+        EOF
+
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v2
       with:
-        ref: 'main'
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: 'Install silicon compiler as described in: https://docs.siliconcompiler.com/en/stable/user_guide/installation.html'
+    - name: Build Docker image
       run: |
-        #sudo apt update                                                        # Update package information - not necessary because github will have already done this
-        sudo apt install python3-dev python3-pip python3-venv                   # Install dependencies
-        python3 -m venv  ./sc                                                   # Create a virtual env
-        source ./sc/bin/activate                                                # Active virtual env (bash/zsh)
-        pip install --upgrade siliconcompiler                                   # Install SiliconCompiler in venv
-        pip show siliconcompiler                                                # Display SiliconCompiler package information
-        python3 -c "import siliconcompiler;print(siliconcompiler.__version__)"  # Check version
+        docker build -t ghcr.io/${{ github.repository_owner }}/sc-asic:latest .
 
-    - name: 'Install tools for ASIC flow as described in: https://docs.siliconcompiler.com/en/latest/reference_manual/apps.html#app-sc-install'
+    - name: Push Docker image to GHCR
       run: |
-        source ./sc/bin/activate                                                # Active virtual env (bash/zsh)
-        sc-install openroad
-        sc-install klayout
-        sc-install yosys
-        sc-install sv2v
-        sc-install yosys-slang
+        docker push ghcr.io/${{ github.repository_owner }}/sc-asic:latest
