--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-# Test 2025-10-15 at 22:42:55
+# Test 2025-10-15 at 22:45:25
 
 name: Test
 run-name: dockerSiliconCompiler
@@ -19,12 +19,14 @@ jobs:
 
     - name: Code to execute in the docker container to place one synthesized module in another
       run: |
-      cat <<EOF > exec.sh
-export PATH=/root/.local/bin:$PATH
-source /app/sc/bin/activate
-cd /workspace/verilog
-python3 top.py
-EOF
+        cat <<EOF > exec.sh
+        export PATH=/root/.local/bin:$PATH
+        source /app/sc/bin/activate
+        cd /workspace/verilog
+        python3 top.py
+        EOF
+        chmod +x exec.sh
+
     - name: Run Silicon compiler in a docker container
       run: |
         docker run --rm -v ".:/workspace/verilog" ghcr.io/philiprbrenan/sc-asic:latest bash -c "bash /workspace/verilog/top.exec"
